[tool.poetry]
name = "yoosung-bot"
version = "0.1.0"
description = "A small Discord bot that formats messages into quotes"
authors = ["Marcus Jones <marcusjones8119@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
python-dotenv = "^1.0.1"
pillow = "^10.2.0"
requests = "^2.31.0"
datetime = "^5.4"
super-image = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
